--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,6 @@ lto = true
 inherits = "release"
 codegen-units = 1
 opt-level = "z"
+
+[patch.crates-io]
+wasm-bridge = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "arc-store" }
