--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -22,7 +22,7 @@ did-method-key = "0.2.2"
 didkit = { version = "0.6.0", default-features = false, features = ["w3c", "ed25519", "ripemd-160", "http-did"] }
 tracing.workspace = true
 wasm-bindgen.workspace = true
-wasm-bridge = { version = "0.3.0", features = ["component-model"] }
+wasm-bridge = { version = "0.3.0", features = ["async", "component-model"] }
 xwt = "0.6.0"
 xwt-core = "0.2.2"
 
