--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,12 +100,17 @@ jobs:
       - name: Delete version branch
         run: git push origin --delete release-v${{ needs.version.outputs.version }}
 
+      - run: mkdir artifacts
+
       - uses: actions/download-artifact@v4
         with:
           pattern: "build-*"
+          path: artifacts
 
       - name: Add version to build file names
         run: |
+          cd artifacts
+
           echo Current directory contents:
           ls -la
 
@@ -125,7 +130,7 @@ jobs:
 
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "*"
+          artifacts: artifacts/*
           generateReleaseNotes: true
           prerelease: ${{ contains(needs.version.output.version, 'beta') }}
           tag: v${{ needs.version.output.version }}
