--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -23,6 +23,7 @@ didkit = { version = "0.6.0", default-features = false, features = ["w3c", "ed25
 tracing.workspace = true
 wasm-bindgen.workspace = true
 wasm-bridge = { version = "0.3.0", features = ["async", "component-model"] }
+wasm-bridge-wasi = "0.3.0"
 xwt = "0.6.0"
 xwt-core = "0.2.2"
 
