--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ codegen-units = 1
 opt-level = "z"
 
 [patch.crates-io]
-wasm-bridge = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "arc-store" }
-wasm-bridge-js = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "arc-store" }
-wasm-bridge-macros = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "arc-store" }
-wasm-bridge-wasi = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "arc-store" }
+wasm-bridge = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "wasmtime-18" }
+wasm-bridge-js = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "wasmtime-18" }
+wasm-bridge-macros = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "wasmtime-18" }
+wasm-bridge-wasi = { git = "https://github.com/kayhhh/wasm-bridge.git", branch = "wasmtime-18" }
