--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,30 +74,44 @@ jobs:
     env:
       TARGET_BRANCH: ${{ inputs.increment == 'stable' && 'stable' || 'beta' }}
     steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: v${{ needs.version.outputs.version }}
-
-      - name: Create target branch if it doesn't exist
+      - name: Git config
         run: |
-          git fetch origin ${{ env.TARGET_BRANCH }} || git checkout -b ${{ env.TARGET_BRANCH }}
-          git push origin ${{ env.TARGET_BRANCH }} || echo "Branch already exists"
+          git config user.name github-actions
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
 
-      - name: Merge version into main
-        uses: everlytic/branch-merge@1.1.5
-        with:
-          github_token: ${{ github.token }}
-          source_ref: v${{ needs.version.outputs.version }}
-          target_branch: main
+      - name: Merge release into main
+        run: |
+          git checkout main
+          git pull origin main
+          git merge --no-ff --no-edit v${{ needs.version.outputs.version }}
+          git push origin main
 
-      - name: Merge version into target
-        uses: everlytic/branch-merge@1.1.5
-        with:
-          github_token: ${{ github.token }}
-          source_ref: v${{ needs.version.outputs.version }}
-          target_branch: ${{ env.TARGET_BRANCH }}
+      - if: ${{ inputs.increment == 'beta' }}
+        name: Merge beta
+        run: |
+          # Create beta branch if it doesn't exist
+          git checkout v${{ needs.version.outputs.version }}
+          git fetch origin beta || git branch beta
 
-      - name: Delete version branch
+          # Merge release into beta
+          git checkout beta
+          git pull origin beta
+          git merge --no-ff --no-edit v${{ needs.version.outputs.version }}
+          git push origin beta
+
+      - if: ${{ inputs.increment == 'stable' }}
+        name: Merge stable
+        run: |
+          # Delete beta and stable branches if they exist
+          git push origin --delete beta || echo "Branch doesn't exist"
+          git push origin --delete stable || echo "Branch doesn't exist"
+
+          # Create stable branch from release
+          git checkout v${{ needs.version.outputs.version }}
+          git checkout -b stable
+          git push origin stable
+
+      - name: Delete release branch
         run: git push origin --delete release-v${{ needs.version.outputs.version }}
 
       - run: mkdir artifacts
