split build and deploy workflows

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -1,4 +1,4 @@
-name: "Build"
+name: "Build Windows"
 
 on:
   workflow_call:
@@ -10,54 +10,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  nix-matrix:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.ref }}
-
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-
-      - id: set-matrix
-        run: |
-          matrix=$(nix eval --json .#githubMatrix.matrix)
-          echo matrix=$matrix >> $GITHUB_OUTPUT
-
-  build-nix:
-    needs: nix-matrix
-    strategy:
-      fail-fast: false
-      matrix: ${{ fromJSON(needs.nix-matrix.outputs.matrix) }}
-    name: ${{ matrix.attr }}
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.ref }}
-          submodules: true
-
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-
-      - run: nix build .?submodules=1#packages.${{ matrix.attr }}
-      - run: find result/bin -exec zip -r ${{ matrix.attr }}.zip {} +
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: build-${{ matrix.attr }}
-          path: ${{ matrix.attr }}.zip
-          retention-days: 1
-
   generate-assets:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ inputs.ref || github.ref }}
           submodules: true
 
       - uses: DeterminateSystems/nix-installer-action@main
@@ -82,7 +40,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ inputs.ref || github.ref }}
           submodules: true
 
       - uses: Swatinem/rust-cache@v2
@@ -112,26 +70,6 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: build-x86_64-windows.${{ matrix.package }}
+          name: build-x86_64-windows.${{ matrix.package }}-${{ inputs.ref || github.ref }}
           path: x86_64-windows.${{ matrix.package }}.zip
-          retention-days: 1
-
-  build-web:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.ref }}
-          submodules: true
-
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-
-      - run: nix build .?submodules=1#web
-      - run: find result -exec zip -r web.zip {} +
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: build-web
-          path: web.zip
           retention-days: 1
