--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy Web
 
 on:
   push:
@@ -22,7 +22,14 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  build-web:
+    if: github.event_name == 'push' || github.event_name == 'repository_dispatch'
+    uses: ./.github/workflows/build-web.yml
+    with:
+      ref: ${{ inputs.ref || github.ref }}
+
   deploy-web:
+    needs: build-web
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
