--- a/.github/workflows/build-nix.yml
+++ b/.github/workflows/build-nix.yml
@@ -48,6 +48,6 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: build-${{ matrix.attr }}-${{ inputs.ref || github.ref }}
+          name: build-${{ matrix.attr }}
           path: ${{ matrix.attr }}.zip
           retention-days: 1
