--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -29,7 +29,7 @@ jobs:
       ref: ${{ inputs.ref || github.ref }}
 
   deploy:
-    needs: build-web
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
