--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -18,7 +18,7 @@ env:
   CHANNEL: ${{ inputs.channel || github.ref_name }}
 
 concurrency:
-  group: "deploy-${{ inputs.channel || github.ref_name }}"
+  group: "deploy-web-${{ inputs.channel || github.ref_name }}"
   cancel-in-progress: false
 
 jobs:
