--- a/.github/workflows/build-nix.yml
+++ b/.github/workflows/build-nix.yml
@@ -7,6 +7,10 @@ on:
         description: "The ref to build."
         required: true
         type: string
+      attr:
+        description: "Only build this attribute."
+        required: false
+        type: string
   workflow_dispatch:
 
 jobs:
@@ -20,11 +24,16 @@ jobs:
           ref: ${{ inputs.ref || github.ref }}
 
       - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - id: set-matrix
         run: |
           matrix=$(nix eval --json .#githubMatrix.matrix)
+
+          if [ -n "${{ inputs.attr }}" ]; then
+          matrix=$(echo $matrix | jq '{include: [.include[] | select(.attr == "${{ inputs.attr }}")]}')
+          fi
+
+          echo "Matrix: $matrix"
           echo matrix=$matrix >> $GITHUB_OUTPUT
 
   build-nix:
