--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -82,8 +82,11 @@ jobs:
           sed -i 's|placeholder-url|'"$URL"'|g' deployments/nix/unavi-server.nix
           sed -i 's|placeholder-sha|'"$SHA"'|g' deployments/nix/unavi-server.nix
 
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+
       - name: Morph deploy
         run: |
           cd deployments/nix
           sh show.sh
-          morph deploy network.nix switch
+          nix develop -c morph deploy network.nix switch
