move to sh script, add ssh key to terraform

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -67,18 +67,10 @@ jobs:
         with:
           name: build-x86_64-linux.unavi-server
 
-      - name: Upload artifact
+      - name: Upload artifacts
         run: |
           cd deployments/nix
-
-          jq -c '.values.root_module.resources[] | select(.name == "unavi-server")' ../nix/show.json | while read server; do
-            name=$(echo $server | jq -r '.values.name')
-            ip=$(echo $server | jq -r '.values.ipv4_address')
-            echo "Uploading to $name ($ip)"
-
-            ssh -i ~/.ssh/id_ed25519 root@$ip "mkdir -p /var/lib/unavi-server/"
-            scp -i ~/.ssh/id_ed25519 x86_64-linux.unavi-server.zip root@$ip:/var/lib/unavi-server/unavi-server.zip
-          done
+          sh unavi-server-upload.sh
 
       - uses: DeterminateSystems/nix-installer-action@main
 
