remove jq from log

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Hmm
         run: |
           cd deployments/nix
-          cat show.json | jq
+          cat show.json
 
       - name: Upload artifacts
         run: |
