--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -42,19 +42,19 @@ jobs:
           submodules: true
           ref: ${{ inputs.ref || github.ref }}
 
-      - uses: hashicorp/setup-terraform@v1
+      - uses: DeterminateSystems/nix-installer-action@main
 
       - name: Apply Terraform
         run: |
           cd deployments/terraform
-          terraform init
-          terraform workspace select -or-create ${{ env.CHANNEL }}
-          terraform apply -auto-approve
+          nix develop -c "terraform init"
+          nix develop -c "terraform workspace select -or-create ${{ env.CHANNEL }}"
+          nix develop -c "terraform apply -auto-approve"
 
       - name: Create show.json
         run: |
           cd deployments/terraform
-          terraform show -json > ../nix/show.json
+          nix develop -c "terraform show -json > ../nix/show.json"
 
       - name: Set up SSH key
         run: |
@@ -67,19 +67,7 @@ jobs:
         with:
           name: build-x86_64-linux.unavi-server
 
-      - name: Hmm
-        run: |
-          cd deployments/nix
-          cat show.json
-
-      - name: Upload artifacts
-        run: |
-          cd deployments/nix
-          sh unavi-server-upload.sh
-
-      - uses: DeterminateSystems/nix-installer-action@main
-
       - name: Morph deploy
         run: |
           cd deployments/nix
-          nix-shell -p morph --command "morph deploy network.nix switch"
+          nix develop -c "morph deploy network.nix switch"
