add known hosts

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -62,7 +62,11 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.DO_SSH_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -t ed25519 github.com >> ~/.ssh/known_hosts
+
+      - name: Add IPs to known hosts
+        run: |
+          cd deployments/nix
+          sh add-known-hosts.sh
 
       - uses: actions/download-artifact@v4
         with:
