--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -15,7 +15,7 @@ on:
   workflow_dispatch:
 
 env:
-  CHANNEL: ${{ inputs.channel || github.ref_name }}
+  TF_WORKSPACE: ${{ inputs.channel || github.ref_name }}
 
 concurrency:
   group: "deploy-server-${{ inputs.channel || github.ref_name }}"
@@ -42,37 +42,18 @@ jobs:
           submodules: true
           ref: ${{ inputs.ref || github.ref }}
 
-      - uses: DeterminateSystems/nix-installer-action@main
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-
-      - name: Apply Terraform
-        run: |
-          cd deployments/terraform
-          nix develop -c terraform init
-          nix develop -c terraform workspace select -or-create ${{ env.CHANNEL }}
-          nix develop -c terraform apply -auto-approve
-
-      - name: Create show.json
-        run: |
-          cd deployments/terraform
-          nix develop -c terraform show -json > ../nix/show.json
-
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.DO_SSH_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
 
-      - name: Add IPs to known hosts
-        run: |
-          cd deployments/nix
-          sh add-known-hosts.sh
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - uses: actions/download-artifact@v4
         with:
           name: build-x86_64-linux.unavi-server
 
-      - name: Morph deploy
-        run: |
-          cd deployments/nix
-          nix develop -c morph deploy network.nix switch
+      - name: Deploy
+        run: nix-shell -p deploy-rs --command "deploy .?submodules=1 -- --impure --no-sandbox"
