--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -55,8 +55,8 @@ jobs:
         with:
           name: build-x86_64-linux.unavi-server
 
-      - name: Git add the artifact (xd)
-        run: git add .
+      - name: debug
+        run: ls -lah wired-protocol
 
       - name: Deploy
-        run: nix-shell -p deploy-rs --command "deploy .?submodules=1 -- --impure --no-sandbox"
+        run: git add . && nix-shell -p deploy-rs --command "deploy .?submodules=1 -- --impure --no-sandbox"
