try adding quotes idk

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -55,8 +55,5 @@ jobs:
         with:
           name: build-x86_64-linux.unavi-server
 
-      - name: debug
-        run: ls -lah wired-protocol
-
       - name: Deploy
-        run: git add . && nix-shell -p deploy-rs --command "deploy .?submodules=1 -- --impure --no-sandbox"
+        run: git add . && nix-shell -p deploy-rs --command 'deploy ".?submodules=1" -- --impure --no-sandbox'
