--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -44,4 +44,4 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Deploy
-        run: nix-shell -p deploy-rs --command "deploy .?submodules=1#"
+        run: nix-shell -p deploy-rs --command "deploy .?submodules=1# --skip-checks"
