--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -44,7 +44,9 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Add to known hosts
-        run: cat deployments/terraform-output.json | jq -r '.unavi_server.value.ip' >> ~/.ssh/known_hosts
+        run: |
+          cd deployments
+          sh add-known-hosts.sh
 
       - name: Deploy
         run: nix-shell -p deploy-rs --command "deploy .?submodules=1 --skip-checks"
