--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -43,10 +43,8 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
-      - name: Add to known hosts
-        run: |
-          cd deployments
-          sh add-known-hosts.sh
+      - name: Apply Terraform
+        run: nix run .?submodules=1#tf-apply ${{ env.TF_WORKSPACE }}
 
       - name: Deploy
         run: nix-shell -p deploy-rs --command "deploy .?submodules=1 --skip-checks"
