--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -45,6 +45,10 @@ jobs:
 
       - name: Apply Terraform
         run: nix run .?submodules=1#tf-apply ${{ env.TF_WORKSPACE }}
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: "chore: update terraform output"
+          default_author: github_actions
 
       - name: Deploy
-        run: nix-shell -p deploy-rs --command "deploy .?submodules=1 --skip-checks"
+        run: nix-shell -p deploy-rs --command "deploy .?submodules=1#unavi-server-${{ env.TF_WORKSPACE }} --skip-checks"
