--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -23,20 +23,32 @@ concurrency:
 
 jobs:
   build:
-    if: github.event_name == 'push' || github.event_name == 'repository_dispatch'
-    uses: ./.github/workflows/build-web.yml
-    with:
-      ref: ${{ inputs.ref || github.ref }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.ref || github.ref }}
+          submodules: true
+
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+
+      - run: nix build .?submodules=1#web
+      - run: |
+          cp -rL result tmp
+          cd tmp
+          zip -r ../web.zip .
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build-web
+          path: web.zip
+          retention-days: 1
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-          ref: ${{ inputs.ref || github.ref }}
-
       - name: Create branch
         run: git checkout --orphan web-app/${{ env.CHANNEL }}
 
