--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          submodules: "true"
+          submodules: true
           ref: ${{ github.event.pull_request.head.ref }}
 
       - uses: DeterminateSystems/flake-checker-action@v5
