--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: "CI"
+name: CI
 
 on:
   push:
@@ -12,11 +12,11 @@ jobs:
     steps:
       - uses: AdityaGarg8/remove-unwanted-software@v2
         with:
-          remove-android: "true"
-          remove-codeql: "true"
-          remove-docker-images: "true"
-          remove-dotnet: "true"
-          remove-haskell: "true"
+          remove-android: true
+          remove-codeql: true
+          remove-docker-images: true
+          remove-dotnet: true
+          remove-haskell: true
 
       - uses: actions/checkout@v4
         with:
@@ -35,7 +35,7 @@ jobs:
           message: "chore: generate component bindings"
           default_author: github_actions
 
-      - run: nix develop -c cargo clippy --fix --no-deps
+      - run: nix develop -c cargo clippy --all-features --fix --no-deps
       - run: nix develop -c cargo fmt --all
       - run: nix develop -c prettier -w .
       - uses: EndBug/add-and-commit@v9
