--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -5,32 +5,12 @@ license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
-[lints]
-workspace = true
-
-[features]
-default = ["auth", "web", "world"]
-axum = [
-  "dep:axum",
-]
-auth = [
-  "axum",
-  "dep:unavi-server-auth",
-]
-web = [
-  "axum",
-  "dep:unavi-server-web",
-]
-world = [
-  "dep:unavi-server-world",
-]
-
 [dependencies]
+axum.workspace = true
+clap = { version = "4.5.4", features = ["derive"] }
+rcgen = "0.12.1" 
+time = "0.3.30"
 tokio.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
-
-axum = { workspace = true, optional = true }
-unavi-server-auth = { path = "../unavi-server-auth", optional = true }
-unavi-server-web = { path = "../unavi-server-web", optional = true }
-unavi-server-world = { path = "../unavi-server-world", optional = true }
+wtransport.workspace = true
