--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -8,7 +8,10 @@ edition.workspace = true
 [dependencies]
 axum.workspace = true
 clap = { version = "4.5.4", features = ["derive"] }
+dwn = "0.0.4"
+dwn-server = { version = "0.0.4", default-features = false }
 rcgen = "0.12.1" 
+surrealdb = { version = "1.3.1", default-features = false, features = ["kv-speedb"] }
 time = "0.3.30"
 tokio.workspace = true
 tracing-subscriber.workspace = true
