--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -8,9 +8,12 @@ edition.workspace = true
 [dependencies]
 axum.workspace = true
 clap = { version = "4.5.4", features = ["derive"] }
-dwn = "0.0.4"
-dwn-server = { version = "0.0.4", default-features = false }
+didkit = { version = "0.6.0", default-features = false }
+dwn = "0.0.5"
+dwn-server = "0.0.5"
 rcgen = "0.12.1" 
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false, features = ["kv-speedb"] }
 time = "0.3.30"
 tokio.workspace = true
