--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -6,7 +6,8 @@ repository.workspace = true
 edition.workspace = true
 
 [dependencies]
-axum.workspace = true
+axum = "0.7.5"
+axum-server = { version = "0.6.0", features = ["rustls", "tokio-rustls", "tls-rustls"] }
 clap = { version = "4.5.4", features = ["derive"] }
 didkit = { version = "0.6.0", default-features = false }
 dwn = "0.0.5"
