--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -7,7 +7,7 @@ edition.workspace = true
 
 [dependencies]
 axum = "0.7.5"
-axum-server = { version = "0.6.0", features = ["rustls", "tokio-rustls", "tls-rustls"] }
+axum-server = "0.6.0"
 clap = { version = "4.5.4", features = ["derive"] }
 didkit = { version = "0.6.0", default-features = false }
 dwn = "0.0.5"
