--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ type_complexity = "allow"
 [workspace.dependencies]
 bevy = "0.13.1"
 bitflags = "2.5.0"
+didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
 tokio = { version = "1.37.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
