--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ type_complexity = "allow"
 bevy = "0.13.1"
 bitflags = "2.5.0"
 didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
+dwn = "0.0.5"
+surrealdb = { version = "1.3.1", default-features = false, features = ["kv-speedb"] }
 tokio = { version = "1.37.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
