--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -12,21 +12,24 @@ workspace = true
 disable-cert-validation = ["wtransport/dangerous-configuration"]
 
 [dependencies]
-bevy_async_task = "0.1.0"
 bevy-tnua = "0.16.0"
 bevy-tnua-xpbd3d = "0.4.0"
 bevy.workspace = true
+bevy_async_task = "0.1.0"
 bevy_vrm = "0.0.9"
 bevy_xpbd_3d = { version = "0.4.2", features = ["simd"] }
-did-method-key = "0.2.2"
+bytes = "1.5.0"
 didkit.workspace = true
+dwn.workspace = true
+surrealdb.workspace = true
+thiserror = "1.0.58"
+tokio.workspace = true
 tracing.workspace = true
 wasm-bindgen.workspace = true
 wasm-bridge = { version = "0.3.0", features = ["async", "component-model"] }
 wasm-bridge-wasi = "0.3.0"
 xwt = "0.6.0"
 xwt-core = "0.2.2"
-bytes = "1.5.0"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 xwt-web-sys = "0.6.0"
