--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -10,12 +10,12 @@ axum = "0.7.5"
 axum-server = "0.6.0"
 clap = { version = "4.5.4", features = ["derive"] }
 didkit.workspace = true
-dwn = "0.0.5"
 dwn-server = "0.0.5"
+dwn.workspace = true
 rcgen = "0.13.0" 
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
-surrealdb = { version = "1.3.1", default-features = false, features = ["kv-speedb"] }
+surrealdb.workspace = true
 time = "0.3.30"
 tokio.workspace = true
 tracing-subscriber.workspace = true
