--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ bevy = "0.13.1"
 bitflags = "2.5.0"
 didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
 dwn = "0.0.5"
+serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false, features = ["kv-speedb"] }
 tokio = { version = "1.37.0", features = ["full"] }
 tracing = "0.1.40"
