--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -21,6 +21,7 @@ bevy_xpbd_3d = { version = "0.4.2", features = ["simd"] }
 bytes = "1.5.0"
 didkit.workspace = true
 dwn.workspace = true
+serde_json.workspace = true
 surrealdb.workspace = true
 thiserror = "1.0.58"
 tokio.workspace = true
