--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -14,7 +14,7 @@ dwn-server = "0.0.5"
 dwn.workspace = true
 rcgen = "0.13.0" 
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.115"
+serde_json.workspace = true
 surrealdb.workspace = true
 time = "0.3.30"
 tokio.workspace = true
