--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -12,9 +12,9 @@ workspace = true
 disable-cert-validation = ["wtransport/dangerous-configuration"]
 
 [dependencies]
+bevy = "0.13.1"
 bevy-tnua = "0.16.0"
 bevy-tnua-xpbd3d = "0.4.0"
-bevy.workspace = true
 bevy_async_task = "0.1.0"
 bevy_vrm = "0.0.9"
 bevy_xpbd_3d = { version = "0.4.2", features = ["simd"] }
@@ -22,9 +22,7 @@ bytes = "1.5.0"
 didkit.workspace = true
 dwn.workspace = true
 serde_json.workspace = true
-surrealdb.workspace = true
 thiserror = "1.0.58"
-tokio.workspace = true
 tracing.workspace = true
 wasm-bindgen.workspace = true
 wasm-bridge = { version = "0.3.0", features = ["async", "component-model"] }
@@ -33,7 +31,12 @@ xwt = "0.6.0"
 xwt-core = "0.2.2"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
+rustls-pki-types = { version = "1.4.1", features = ["web"] }
+surrealdb = { workspace = true, features = ["kv-indxdb"] }
+tokio.workspace = true
 xwt-web-sys = "0.6.0"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
+surrealdb = { workspace = true, features = ["kv-speedb"] }
+tokio = { workspace = true, features = ["rt-multi-thread"] }
 wtransport.workspace = true
