--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,9 @@ didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
 dwn = "0.0.5"
 serde_json = "1.0.115"
 surrealdb = { version = "1.3.1", default-features = false }
-tokio = { version = "1.37.0", features = ["rt", "macros"] }
+tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
-wasm-bindgen = "=0.2.91"
 wit-bindgen-rt = "0.20.0"
 wtransport = "0.1.8"
 
