create wired-protocol crate

--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -26,6 +26,7 @@ thiserror = "1.0.58"
 tracing.workspace = true
 wasm-bridge = { version = "0.3.0", features = ["async", "component-model"] }
 wasm-bridge-wasi = "0.3.0"
+wired-protocol.workspace = true
 xwt = "0.6.0"
 xwt-core = "0.2.2"
 
