--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ surrealdb = { version = "1.3.1", default-features = false }
 tokio = { version = "1.37.0", features = ["macros", "rt", "time"]}
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+wired-protocol = { path = "crates/wired-protocol" }
 wit-bindgen-rt = "0.20.0"
 wtransport = "0.1.8"
 
