--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,12 @@ jobs:
           message: "chore: lint"
           default_author: github_actions
 
+      - run: nix develop -c nix run .#generate-readme
+      - uses: EndBug/add-and-commit@v9
+        with:
+          message: "chore: generate README"
+          default_author: github_actions
+
       - run: nix develop -c cargo doc --workspace --all-features --no-deps
       - run: nix develop -c cargo test --workspace --all-features --all-targets
       - run: nix develop -c cargo test --workspace --all-features --doc
