--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ type_complexity = "allow"
 
 [workspace.dependencies]
 bitflags = "2.5.0"
+clap = { version = "4.5.4", features = ["derive"] }
 didkit = { version = "0.6.0", default-features = false, features = ["ed25519"] }
 dwn = "0.0.5"
 serde_json = "1.0.115"
