--- a/crates/unavi-app/Cargo.toml
+++ b/crates/unavi-app/Cargo.toml
@@ -9,6 +9,7 @@ edition.workspace = true
 workspace = true
 
 [features]
+default = []
 disable-cert-validation = ["wtransport/dangerous-configuration"]
 
 [dependencies]
@@ -41,6 +42,7 @@ web-sys = { version = "0.3.68", features = ["Location", "UrlSearchParams", "Wind
 xwt-web-sys = "0.6.0"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
+self_update = { version = "0.39.0", features = ["archive-zip"] }
 surrealdb = { workspace = true, features = ["kv-speedb"] }
 tokio = { workspace = true, features = ["rt-multi-thread"] }
 wtransport.workspace = true
