--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,7 @@ updates:
     directory: /
     schedule:
       interval: monthly
+  - package-ecosystem: terraform
+    directory: /
+    schedule:
+      interval: monthly
