--- a/crates/unavi-server/Cargo.toml
+++ b/crates/unavi-server/Cargo.toml
@@ -18,6 +18,7 @@ serde_json.workspace = true
 surrealdb = { workspace = true, features = ["kv-speedb"] }
 time = "0.3.30"
 tokio = { workspace = true, features = ["rt-multi-thread"] }
+tower-http = { version = "0.5.2", features = ["fs"] }
 tracing-subscriber.workspace = true
 tracing.workspace = true
 wired-protocol.workspace = true
